Home: Fixed: Header disappeared on small viewports

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -6,6 +6,6 @@ body {
 
 @media (max-width: 720px) {
     body {
-        height: calc(100vh - 120.39px - 130px);
+        height: calc(100vh - 134.39px - 130px);
     }
 }
